--- a/.github/workflows/ios-ci.yml
+++ b/.github/workflows/ios-ci.yml
@@ -9,8 +9,12 @@ on:
 jobs:
   build-and-test:
     runs-on: macos-13
+
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout into root
+      uses: actions/checkout@v3
+      with:
+        path: .   # ⬅️ This ensures project stays in root
 
     - name: Select Xcode version
       run: sudo xcode-select -s /Applications/Xcode_14.2.app
